--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,50 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+.container {
+    background: black;
+    width: 120px; 
+    padding: 20px 10px;
+    border-radius: 20px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    gap: 15px; 
+    margin: auto; 
+    margin-top: 50px; 
+}
+
+.trafficTop {
+    border-left: 7px solid black;
+    height: 55px;
+    position: absolute;
+    left: 50%;
+    margin-left: -3px;
+    top: 0;
+}
+
+.light {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: red;
+}
+
+.red {
+    
+    background-color: red;
+}
+
+.yellow {
+    background-color: yellow;
+}
+
+.green {
+    background-color: green;
+}
+
+.glow{
+    box-shadow: 0px 0px 30px 20px #fae901
+}
+
